name:                c-of-scheme
version:             1.0.0.0
synopsis:            Tiny Compiler for Scheme to C
license:             MIT
license-file:        LICENSE
author:              Danny Gratzer
maintainer:          danny.gratzer@gmail.com
copyright:           Danny Gratzer <danny.gratzer@gmail.com> 2014

category:            Compilers/Interpreters

build-type:          Simple
cabal-version:       >=1.10
executable c_of_scheme
  main-is:             Main.hs
  other-modules:       Utils.Gen,
                       Utils.Error,
                       AST,
                       CPS,
                       OptimizeCPS,
                       ClosureConvert,
                       CodeGen,
                       RewriteToplevels,
                       Driver
  build-depends:       base >=4.6 && <5,
                       mtl>= 2.0,
                       containers,
                       c-dsl >= 0.3,
                       parsec >= 3.0,
                       process > 1.0,
                       unix,
                       errors >= 1.3,
                       recursion-schemes>=3.0
  hs-source-dirs:      src
  ghc-options:         -Wall -fno-warn-name-shadowing
  default-language:    Haskell2010
  