name:                scheme2c
version:             0.1.0.0
synopsis:            Compiler for Scheme to C
license:             MIT
license-file:        LICENSE
author:              Danny Gratzer
maintainer:          danny.gratzer@gmail.com
copyright:           Danny Gratzer <danny.gratzer@gmail.com> 2014

category:            Compilers/Interpreters

build-type:          Simple
cabal-version:       >=1.10
executable scheme2c
  main-is:             Main.hs
  other-modules:       Gen
  build-depends:       base >=4.6 && <4.7, mtl>= 2.0, containers,
                       c-dsl >= 0.3, parsec >= 3.0, process > 1.0, unix
  hs-source-dirs:      src
  default-language:    Haskell2010
  